--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
 	],
 	"dependencies": {
 		"node-osc": "^4.1.7",
-		"socket.io": "^2.3.0"
+		"prettysize": "^2.0.0",
+		"socket.io": "^2.3.0",
+		"systeminformation": "^4.23.0"
 	},
 	"keywords": [
 		"osc",
